--- a/clean-up/2-yellow-bags.html
+++ b/clean-up/2-yellow-bags.html
@@ -19,7 +19,7 @@
     <title>Central Park: Cleanup 2 | There Is No Earth B</title>
     <meta property="og:title" content="Central Park: Cleanup 2 | There Is No Earth B"/>
     <meta property="og:description" content="Cleanup 2 in Central Park by Dhrstadyumn, Vaibhav, Manas, Basil, Amit, Mayank, Manas, Shrikant, Amrendra, Muskan, Akanksha, Priya, Piyush, Kaveri, Shubhankar, Anurag, Ishan" />
-    <meta property="og:image" content="https://thereisnoearthb.org/central-park/images/cleanup2.jpg" />
+    <meta property="og:image" content="http://thereisnoearthb.org/central-park/images/cleanup2.jpg" />
 
 </head>
 
