--- a/clean-up/2-yellow-bags.html
+++ b/clean-up/2-yellow-bags.html
@@ -20,7 +20,7 @@
     <meta property="og:title" content="Central Park: Cleanup 2 | There Is No Earth B"/>
     <meta property="og:description" content="Cleanup 2 in Central Park by Dhrstadyumn, Vaibhav, Manas, Basil, Amit, Mayank, Manas, Shrikant, Amrendra, Muskan, Akanksha, Priya, Piyush, Kaveri, Shubhankar, Anurag, Ishan" />
     <meta property="og:image" content="http://thereisnoearthb.org/central-park/images/cleanup2.jpg" />
-
+    <link rel="apple-touch-icon" href="https://thereisnoearthb.org/TINEB_LOGO.jpeg">.
 </head>
 
 <body class="post-template-default single single-post postid-78 single-format-standard theme-hive woocommerce-no-js has_sidebar">
